--- a/indexTemplate.html
+++ b/indexTemplate.html
@@ -69,9 +69,9 @@
 
   <div id="swagger-ui"></div>
 
-  <script type="application/json" src="swagger-ui-bundle.js"> </script>
-  <script type="application/json" src="swagger-ui-standalone-preset.js"> </script>
-  <script type="application/json" src="swagger-ui-init.js"> </script>
+  <script type="application/javascript" src="swagger-ui-bundle.js"> </script>
+  <script type="application/javascript" src="swagger-ui-standalone-preset.js"> </script>
+  <script type="application/javascript" src="swagger-ui-init.js"> </script>
   <style>
     <% customCss %>
   </style>
